--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  font-family: "Nunito", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+table{
+  border-collapse: collapse;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 25px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+th:hover{
+  cursor: pointer;
 }
+
+tr{
+  border-top: 1px solid black;
+} 
+
+td{
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  border-radius: 12px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+  cursor: pointer;
+}
+
+.changePage{
+  text-align:center;
+  width:100%;
+}
+
+.scrollPage {
+  background-color: lightblue;
+  border-radius: 12px;
+  margin: 5px;
+}
+
+
+
